--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
       </form>
       <ul class="top-menue">
        <li>
-         <a class="bookmarks" href=""  aria-label="кнопка"> <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <a class="bookmarks" href="#"  aria-label="кнопка"> <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
           </svg> Закладки: 0</a>
       </li>
        <li>
-         <a class="basket" href="" aria-label="кнопка"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <a class="basket" href="#" aria-label="кнопка"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
           <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
           <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
           </svg> Корзина: 0</a>
         </li>
-       <li><a class="order" href="" aria-label="кнопка">Оформить заказ</a></li>
+       <li><a class="order" href="#" aria-label="кнопка">Оформить заказ</a></li>
        </ul>
     </div>
   </div>
@@ -46,24 +46,24 @@
           <p class="contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="header-login-index">
-          <a class="login" href="" aria-label="кнопка личного кабинета">
+          <a class="login" href="#" aria-label="кнопка личного кабинета">
             <svg width="21" height="17" viewBox="0 0 21 17"  xmlns="http://www.w3.org/2000/svg">
               <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
               <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z" fill="#C5C5C5"/>
               </svg>
               Войти</a>
-          <a  class="check-in" href="" aria-label="кнопка личного кабинета">Регистрация</a>
+          <a  class="check-in" href="#" aria-label="кнопка личного кабинета">Регистрация</a>
         </div>
     </div>
     <nav class="main-nav">
     <ul class="header-nav">
       <li><a href="index.html" aria-label="кнопка меню">Главная</a></li>
-      <li><a href="" aria-label="кнопка меню">Компания</a></li>
+      <li><a href="#" aria-label="кнопка меню">Компания</a></li>
       <li><a href="catalog.html" aria-label="кнопка меню">Каталог</a></li>
-      <li><a href="" aria-label="кнопка меню">Новости</a></li>
-      <li><a href="" aria-label="кнопка меню">Спецпредложения</a></li>
-      <li><a href="" aria-label="кнопка меню">Доставка</a></li>
-      <li><a href="" aria-label="кнопка меню">Контакты</a></li>
+      <li><a href="#" aria-label="кнопка меню">Новости</a></li>
+      <li><a href="#" aria-label="кнопка меню">Спецпредложения</a></li>
+      <li><a href="#" aria-label="кнопка меню">Доставка</a></li>
+      <li><a href="#" aria-label="кнопка меню">Контакты</a></li>
     </ul>
     </nav>
 </header>
@@ -71,17 +71,17 @@
   <h1 class="visually-hidden">Интернет-магазин строительных товаров "ТЕХНОМАРТ"</h1>
   <div class="container">
   <section class="category">
-    <div class="category-materials">
+    <div class="category-materials image-new">
       <p>Материалы</p>
-      <a class="category-button" href="" aria-label="кнопка категории товаров">на любой вкус</a>
+      <a class="category-button" href="#" aria-label="кнопка категории товаров">на любой вкус</a>
      </div>
      <div class="category-tools">
       <p>Инструмент</p>
-      <a class="category-button" href="" aria-label="кнопка категории товаров">на все случаи</a>
+      <a class="category-button" href="#" aria-label="кнопка категории товаров">на все случаи</a>
      </div>
      <div class="category-technics">
       <p>Техника</p>
-      <a class="category-button" href="" aria-label="кнопка категории товаров">для стройки</a>
+      <a class="category-button" href="#" aria-label="кнопка категории товаров">для стройки</a>
      </div>
      <div class="category-items">
       <form>
@@ -112,27 +112,27 @@
      </div>
      <div class="category-sale">
       <p>Скидки 50%</p>
-      <a class="category-button" href="" aria-label="кнопка категории товаров">На 350 товаров</a>
+      <a class="category-button" href="#" aria-label="кнопка категории товаров">На 350 товаров</a>
      </div>
      <div class="category-delivery">
       <p>Доставка</p>
-      <a class="category-button" href="" aria-label="кнопка категории товаров">бесплатно</a>
+      <a class="category-button" href="#" aria-label="кнопка категории товаров">бесплатно</a>
      </div>
   </section>
   <section class="popular popular-item">
     <div class="popular-header">
       <h2>Популярные товары:</h2>
-      <a href="" class="main-button" aria-label="кнопка">Все популярные товары</a>
+      <a href="#" class="main-button" aria-label="кнопка">Все популярные товары</a>
     </div>
     <ul class="catalog-list">
       <li class="catalog-item">
         <p class="catalog-item-image">
-            <a href="" class="card-button1" aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="#" class="card-button1" aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
               <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
               <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
               </svg> &nbsp; Купить</a>
-            <a href="" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
+            <a href="#" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
           <img src="img/items/bfg9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 9000</p>
         <p class="catalog-item-price">32500 Р.</p>
@@ -140,12 +140,12 @@
       </li>
       <li class="catalog-item">
         <p class="catalog-item-image image-new">
-          <a href="" class="card-button1"  aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a href="#" class="card-button1"  aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
             <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
             <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
             </svg> &nbsp; Купить</a>
-          <a href="" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
+          <a href="#" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
         <img src="img/items/bfg3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 3000</p>
         <p class="catalog-item-price"> 22500 Р.</p>
@@ -153,12 +153,12 @@
       </li>
       <li class="catalog-item">
         <p class="catalog-item-image">
-          <a href="" class="card-button1"  aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a href="#" class="card-button1"  aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
             <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
             <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
             </svg> &nbsp; Купить</a>
-          <a href="" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
+          <a href="#" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
           <img src="img/items/bfg6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
         <p class="catalog-item-price">30500 Р.</p>
@@ -166,12 +166,12 @@
       </li>
       <li class="catalog-item">
         <p class="catalog-item-image image-new">
-          <a href="" class="card-button1"  aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a href="#" class="card-button1"  aria-label="кнопка добавления товара в корзину"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
             <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
             <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
             </svg> &nbsp; Купить</a>
-          <a href="" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
+          <a href="#" class="card-button2"  aria-label="кнопка добавления товара в избранное">В закладки</a>
           <img src="img/items/bfg2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 2000</p>
         <p class="catalog-item-price">22500 Р.</p>
@@ -182,17 +182,17 @@
   <section class="popular">
     <div class="popular-header">
       <h2>Популярные производители:</h2>
-      <a href="" class="main-button" aria-label="кнопка">Все производители</a>
+      <a href="#" class="main-button" aria-label="кнопка">Все производители</a>
     </div>
     <ul class="providers-list">
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/bosch.jpg" width="220" height="145" alt="bosch"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/makita.jpg" width="220" height="145" alt="makita"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/dewalt.jpg" width="220" height="145" alt="dewalt"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/interskol.jpg" width="220" height="145" alt="interskol"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/hitachi.jpg" width="220" height="145" alt="hitachi"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/lg.jpg" width="220" height="145" alt="lg"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/aeg.jpg" width="220" height="145" alt="aeg"></a></li>
-      <li class="providers-item"><a href="" aria-label="ссылка на производителя"><img src="img/providers/metabo.jpg" width="220" height="145" alt="metabo"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/bosch.jpg" width="220" height="145" alt="bosch"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/makita.jpg" width="220" height="145" alt="makita"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/dewalt.jpg" width="220" height="145" alt="dewalt"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/interskol.jpg" width="220" height="145" alt="interskol"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/hitachi.jpg" width="220" height="145" alt="hitachi"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/lg.jpg" width="220" height="145" alt="lg"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/aeg.jpg" width="220" height="145" alt="aeg"></a></li>
+      <li class="providers-item"><a href="#" aria-label="ссылка на производителя"><img src="img/providers/metabo.jpg" width="220" height="145" alt="metabo"></a></li>
     </ul>
   </section>
  </div>
@@ -240,7 +240,7 @@
           <h2>Кредит</h2>
           <p>Залезть в долговую яму стало проще!<br>
             Кредитные консультанты придут вам на помощь.</p>
-            <a href="" class="main-button credit-button"  aria-label="кнопка отправки формы">ОТПРАВИТЬ ЗАЯВКУ</a>
+            <a href="#" class="main-button credit-button"  aria-label="кнопка отправки формы">ОТПРАВИТЬ ЗАЯВКУ</a>
         </div>
       </div>
     </div>
@@ -260,7 +260,7 @@
         <li>Автотрейдинг</li>
         <li>ЖелДорЭкспедиция</li>
       </ul>
-      <a href="" class="main-button partners-button" aria-label="кнопка">подробнее о компании </a>
+      <a href="#" class="main-button partners-button" aria-label="кнопка">подробнее о компании </a>
     </div>
     <div class="contacts">
       <h2>Контакты</h2>
@@ -278,21 +278,21 @@
       <div class="footer-logo"><a href="index.html" aria-label="кнопка на главную"><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»" width="137" height="22"></a></div>
     <nav class="footer-nav-main">
       <ul class="footer-nav-main">
-        <li><a href="" aria-label="кнопка меню">Компания</a></li>
-        <li><a href="" aria-label="кнопка меню">Новости</a></li>
+        <li><a href="#" aria-label="кнопка меню">Компания</a></li>
+        <li><a href="#" aria-label="кнопка меню">Новости</a></li>
         <li><a href="catalog.html" aria-label="кнопка меню">Каталог</a></li>
-        <li><a href="" aria-label="кнопка меню">Доставка</a></li>
-        <li><a href="" aria-label="кнопка меню">Контакты</a></li>
+        <li><a href="#" aria-label="кнопка меню">Доставка</a></li>
+        <li><a href="#" aria-label="кнопка меню">Контакты</a></li>
       </ul>
     </nav>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
     <a  class="footer-telephone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     <nav class="footer-nav">
        <ul class="footer-nav">
-          <li><a href="" aria-label="кнопка категории товаров">Материалы</a></li>
-          <li><a href="" aria-label="кнопка категории товаров">Техника</a></li>
-          <li><a href="" aria-label="кнопка категории товаров">Инструмент</a></li>
-          <li><a href="" aria-label="кнопка категории товаров">Спецпредложения</a></li>
+          <li><a href="#" aria-label="кнопка категории товаров">Материалы</a></li>
+          <li><a href="#" aria-label="кнопка категории товаров">Техника</a></li>
+          <li><a href="#" aria-label="кнопка категории товаров">Инструмент</a></li>
+          <li><a href="#" aria-label="кнопка категории товаров">Спецпредложения</a></li>
       </ul>
     </nav>
     </div>
@@ -333,8 +333,8 @@
 <section class="modal-add-product">
   <p>Товар добавлен в корзину!</p>
   <div class="form-bottom-1">
-    <a  href="" class="modal-btn-1"  aria-label="кнопка">Оформить заказ</a>
-    <a  href=""  class="modal-btn-2"  aria-label="кнопка">Продолжить покупки</a>
+    <a  href="#" class="modal-btn-1"  aria-label="кнопка">Оформить заказ</a>
+    <a  href="#"  class="modal-btn-2"  aria-label="кнопка">Продолжить покупки</a>
   </div>
   <button class="modal-close" type="button" aria-label="кнопка закрытия формы"></button>
 </section>
